# secureircd

./: Cargo.toml  README.md
.ci/: build.sh
py/: secureirc-v6.py  secureirc.py
src/: main.rs
